--- a/index.html
+++ b/index.html
@@ -3,36 +3,136 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Benim Web Sitem</title>
+    <title>AYBÜ Görev Takip</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        :root {
+            --primary-color: #003366;
+            --secondary-color: #0099cc;
+            --background-color: #f5f6fa;
+        }
+
+        * {
             margin: 0;
-            padding: 20px;
-            background-color: #f0f0f0;
+            padding: 0;
+            box-sizing: border-box;
         }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+
+        body {
+            font-family: 'Segoe UI', sans-serif;
+            background-color: var(--background-color);
         }
-        h1 {
-            color: #333;
+
+        .sidebar {
+            width: 250px;
+            height: 100vh;
+            background-color: var(--primary-color);
+            position: fixed;
+            left: 0;
+            top: 0;
+            color: white;
+        }
+
+        .logo {
+            padding: 20px;
             text-align: center;
+            border-bottom: 1px solid rgba(255,255,255,0.1);
         }
-        p {
-            line-height: 1.6;
-            color: #666;
+
+        .menu-items {
+            padding: 20px 0;
+        }
+
+        .menu-item {
+            padding: 15px 25px;
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+        }
+
+        .menu-item:hover {
+            background-color: rgba(255,255,255,0.1);
+        }
+
+        .menu-item.active {
+            background-color: var(--secondary-color);
+        }
+
+        .main-content {
+            margin-left: 250px;
+            padding: 20px;
+        }
+
+        .top-bar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            background-color: white;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+
+        .search-bar {
+            flex: 1;
+            margin: 0 20px;
+        }
+
+        .search-bar input {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+
+        .user-profile {
+            display: flex;
+            align-items: center;
+            gap: 10px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Hoş Geldiniz!</h1>
-        <p>Bu benim ilk web sitem. GitHub Pages kullanarak oluşturdum.</p>
+    <div class="sidebar">
+        <div class="logo">
+            <h2>AYBÜ Görev Takip</h2>
+        </div>
+        <div class="menu-items">
+            <div class="menu-item active">
+                <span>Ana Sayfa</span>
+            </div>
+            <div class="menu-item">
+                <span>Görevlerim</span>
+            </div>
+            <div class="menu-item">
+                <span>Ekibim</span>
+            </div>
+            <div class="menu-item">
+                <span>Raporlar</span>
+            </div>
+            <div class="menu-item">
+                <span>Ayarlar</span>
+            </div>
+        </div>
+        <div class="user-info" style="position: absolute; bottom: 20px; padding: 20px;">
+            <div>Ahmet Yılmaz</div>
+            <div style="font-size: 0.8em; opacity: 0.8;">Yönetici</div>
+        </div>
+    </div>
+
+    <div class="main-content">
+        <div class="top-bar">
+            <h2>Ana Sayfa</h2>
+            <div class="search-bar">
+                <input type="text" placeholder="Ara...">
+            </div>
+            <div class="user-profile">
+                <div class="notifications">
+                    <span>🔔</span>
+                </div>
+                <div>Ahmet Yılmaz ▼</div>
+            </div>
+        </div>
+        <!-- Ana içerik buraya gelecek -->
     </div>
 </body>
 </html>
