--- a/index.html
+++ b/index.html
@@ -271,28 +271,32 @@
             <i class="fas fa-university" style="font-size: 30px;"></i>
             <h2>AYBÜ Görev Takip</h2>
         </div>
-        <div class="menu-items">
-            <a href="#" class="menu-item active">
-                <i class="fas fa-home"></i>
-                Ana Sayfa
-            </a>
-            <a href="#" class="menu-item">
-                <i class="fas fa-tasks"></i>
-                Görevlerim
-            </a>
-            <a href="#" class="menu-item">
-                <i class="fas fa-users"></i>
-                Ekibim
-            </a>
-            <a href="#" class="menu-item">
-                <i class="fas fa-chart-bar"></i>
-                Raporlar
-            </a>
-            <a href="#" class="menu-item">
-                <i class="fas fa-cog"></i>
-                Ayarlar
-            </a>
-        </div>
+    <div class="menu-items">
+    <a href="index.html" class="menu-item active">
+        <i class="fas fa-home"></i>
+        Ana Sayfa
+    </a>
+    <a href="user-management.html" class="menu-item">
+        <i class="fas fa-users-cog"></i>
+        Kullanıcı Yönetimi
+    </a>
+    <a href="#" class="menu-item">
+        <i class="fas fa-tasks"></i>
+        Görevlerim
+    </a>
+    <a href="#" class="menu-item">
+        <i class="fas fa-users"></i>
+        Ekibim
+    </a>
+    <a href="#" class="menu-item">
+        <i class="fas fa-chart-bar"></i>
+        Raporlar
+    </a>
+    <a href="#" class="menu-item">
+        <i class="fas fa-cog"></i>
+        Ayarlar
+    </a>
+</div>
         <div class="bottom-user">
             <div class="name">Ahmet Yılmaz</div>
             <div class="role">Yönetici</div>
