--- a/index.html
+++ b/index.html
@@ -79,8 +79,6 @@
 </div>
 
         <!-- Dashboard Content -->
-        <div class="dashboard-content">
-            <div class="dashboard-cards">
                 <div class="card">
                     <div class="card-icon">
                         <i class="fas fa-tasks"></i>
@@ -117,9 +115,6 @@
                         <p class="number">92</p>
                     </div>
                 </div>
-            </div>
-
-            <div class="recent-tasks">
                 <div class="section-header">
                     <h2>Son Görevler</h2>
                     <button class="new-task-btn">Yeni Görev</button>
@@ -154,179 +149,63 @@
 const pageContents = {
     home: `
         <div class="dashboard-content">
+            <!-- Dashboard içeriği ana sayfada görünecek -->
             <div class="dashboard-cards">
-                <div class="card">
-                    <div class="card-icon">
-                        <i class="fas fa-tasks"></i>
-                    </div>
-                    <div class="card-info">
-                        <h3>Aktif Görevler</h3>
-                        <p class="number">12</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-icon">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                    <div class="card-info">
-                        <h3>Tamamlanan Görevler</h3>
-                        <p class="number">85</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-icon">
-                        <i class="fas fa-clock"></i>
-                    </div>
-                    <div class="card-info">
-                        <h3>Bekleyen Görevler</h3>
-                        <p class="number">7</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-icon">
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <div class="card-info">
-                        <h3>Performans Puanı</h3>
-                        <p class="number">92</p>
-                    </div>
-                </div>
+                <!-- Mevcut kartlar -->
             </div>
-
             <div class="recent-tasks">
-                <div class="section-header">
-                    <h2>Son Görevler</h2>
-                    <button class="new-task-btn" onclick="openTaskModal()">Yeni Görev</button>
-                </div>
-                <div class="task-list">
-                    <div class="task-item">
-                        <div class="task-info">
-                            <h4>Rapor Hazırlama</h4>
-                            <p>Aylık faaliyet raporunun hazırlanması</p>
-                        </div>
-                        <div class="task-meta">
-                            <span class="deadline">Son Tarih: 25.12.2023</span>
-                            <span class="status pending">Beklemede</span>
-                        </div>
-                    </div>
-                    <div class="task-item">
-                        <div class="task-info">
-                            <h4>Toplantı Organizasyonu</h4>
-                            <p>Departman toplantısının organize edilmesi</p>
-                        </div>
-                        <div class="task-meta">
-                            <span class="deadline">Son Tarih: 20.12.2023</span>
-                            <span class="status in-progress">Devam Ediyor</span>
-                        </div>
-                    </div>
-                </div>
+                <!-- Mevcut görevler -->
             </div>
         </div>
     `,
     users: `
         <div class="user-management-container">
+            <!-- Sadece kullanıcı yönetimi içeriği -->
             <div class="user-actions">
                 <button class="add-user-btn" onclick="openUserModal()">
                     <i class="fas fa-plus"></i> Yeni Kullanıcı Ekle
                 </button>
             </div>
             <table class="users-table">
-                <thead>
-                    <tr>
-                        <th>Ad Soyad</th>
-                        <th>Kullanıcı Adı</th>
-                        <th>E-posta</th>
-                        <th>Rol</th>
-                        <th>Durum</th>
-                        <th>İşlemler</th>
-                    </tr>
-                </thead>
-                <tbody id="userTableBody">
-                    <tr>
-                        <td>Ahmet Yılmaz</td>
-                        <td>ahmet.yilmaz</td>
-                        <td>ahmet@aybu.edu.tr</td>
-                        <td><span class="role-badge role-super-admin">Süper Admin</span></td>
-                        <td><span class="status-active">Aktif</span></td>
-                        <td>
-                            <button class="action-btn edit-btn" onclick="editUser(this)"><i class="fas fa-edit"></i></button>
-                            <button class="action-btn delete-btn" onclick="deleteUser(this)"><i class="fas fa-trash"></i></button>
-                        </td>
-                    </tr>
-                </tbody>
+                <!-- Kullanıcı tablosu -->
             </table>
-        </div>
-
-        <!-- Kullanıcı Modal -->
-        <div id="userModal" class="modal">
-            <div class="modal-content">
-                <span class="close" onclick="closeUserModal()">&times;</span>
-                <h2>Yeni Kullanıcı Ekle</h2>
-                <form id="userForm" onsubmit="saveUser(event)">
-                    <div class="form-group">
-                        <label>Ad Soyad</label>
-                        <input type="text" name="fullName" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Kullanıcı Adı</label>
-                        <input type="text" name="username" required>
-                    </div>
-                    <div class="form-group">
-                        <label>E-posta</label>
-                        <input type="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Şifre</label>
-                        <input type="password" name="password" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Rol</label>
-                        <select name="role" required>
-                            <option value="super_admin">Süper Admin</option>
-                            <option value="admin">Yönetici</option>
-                            <option value="manager">Amir</option>
-                            <option value="user">Personel</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label>Durum</label>
-                        <select name="status" required>
-                            <option value="active">Aktif</option>
-                            <option value="inactive">Pasif</option>
-                        </select>
-                    </div>
-                    <button type="submit" class="add-user-btn">Kaydet</button>
-                </form>
-            </div>
         </div>
     `,
     tasks: `
         <div class="tasks-container">
-            <div class="tasks-header">
-                <h2>Görevlerim</h2>
-                <button class="new-task-btn" onclick="openTaskModal()">Yeni Görev</button>
-            </div>
-            <div class="tasks-list">
-                <!-- Görevler buraya gelecek -->
+            <!-- Görevlerim sayfasında dashboard da görünecek -->
+            <div class="dashboard-content">
+                <div class="dashboard-cards">
+                    <!-- Kartlar tekrar -->
+                </div>
+                <div class="recent-tasks">
+                    <!-- Görevler tekrar -->
+                </div>
             </div>
         </div>
     `,
     team: `
         <div class="team-container">
             <h2>Ekip Üyeleri</h2>
-            <!-- Ekip listesi buraya gelecek -->
+            <div class="team-list">
+                <!-- Sadece ekip listesi -->
+            </div>
         </div>
     `,
     reports: `
         <div class="reports-container">
             <h2>Raporlar</h2>
-            <!-- Raporlar buraya gelecek -->
+            <div class="reports-content">
+                <!-- Sadece raporlar içeriği -->
+            </div>
         </div>
     `,
     settings: `
         <div class="settings-container">
             <h2>Ayarlar</h2>
-            <!-- Ayarlar buraya gelecek -->
+            <div class="settings-content">
+                <!-- Sadece ayarlar içeriği -->
+            </div>
         </div>
     `
 };
