--- a/index.html
+++ b/index.html
@@ -393,7 +393,52 @@ const pageContents = {
     </div>
 `
 };
+// Profil fotoğrafı önizleme
+function previewImage(event) {
+    const file = event.target.files[0];
+    if (file) {
+        const reader = new FileReader();
+        reader.onload = function(e) {
+            document.getElementById('profileImage').src = e.target.result;
+        }
+        reader.readAsDataURL(file);
+    }
+}
 
+// Profil bilgilerini güncelleme
+function updateProfile(event) {
+    event.preventDefault();
+    const formData = new FormData(event.target);
+    // API çağrısı yapılacak
+    showNotification('Profil bilgileri başarıyla güncellendi');
+}
+
+// Sicil bilgilerini güncelleme
+function updateRegistry(event) {
+    event.preventDefault();
+    const formData = new FormData(event.target);
+    // API çağrısı yapılacak
+    showNotification('Sicil bilgileri başarıyla güncellendi');
+}
+
+// Şifre değiştirme
+function updatePassword(event) {
+    event.preventDefault();
+    const formData = new FormData(event.target);
+    if (formData.get('newPassword') !== formData.get('confirmPassword')) {
+        showNotification('Yeni şifreler eşleşmiyor', 'error');
+        return;
+    }
+    // API çağrısı yapılacak
+    showNotification('Şifreniz başarıyla güncellendi');
+    event.target.reset();
+}
+
+// Bildirim gösterme
+function showNotification(message, type = 'success') {
+    // Burada bildirim gösterme mantığı eklenecek
+    alert(message);
+}
 function openUserModal() {
     document.getElementById('userModal').style.display = 'block';
 }
